shell.grammar
command -> command_line command_tail command_end

command_end -> NL | QM NL

command_tail -> QM command_line command_tail 
               | ε

command_line -> complete_command piped_cmd

piped_cmd -> PIPE complete_command piped_cmd
            | ε

complete_command -> cmd_prefix WORD cmd_suffix

cmd_prefix -> redirection cmd_prefix
             | ε

cmd_suffix -> redirection cmd_suffix
             | cmd_arg cmd_suffix
             | &
             | ε

redirection -> redirection_op WORD

cmd_arg -> WORD cmd_arg
          | ε

redirection_op -> APPEND
                 | INFILE
                 | OUTFILE
